# digital_twin

./: Dockerfile  README.md  VM_SETUP.md  pyproject.toml
rls_fetch_ws/src/apps/low_level_planning/: CMakeLists.txt  package.xml
rls_fetch_ws/src/apps/low_level_planning/config/: cartesian_pose_controller.yaml
rls_fetch_ws/src/apps/low_level_planning/launch/: fetch_control_drivers.launch  fetch_control_gazebo.launch  navigation.launch  rls_env.launch
rls_fetch_ws/src/apps/low_level_planning/launch/include/: amcl.launch.xml  fetch.launch.xml  move_base.launch.xml
rls_fetch_ws/src/apps/low_level_planning/maps/: icra24.pgm  icra24.yaml  simulation.pgm  simulation.yaml
rls_fetch_ws/src/apps/low_level_planning/models/: environment.sdf
rls_fetch_ws/src/apps/low_level_planning/models/chair/: chair.sdf  model.config
rls_fetch_ws/src/apps/low_level_planning/models/chair_2/: chair_2.sdf  model.config
rls_fetch_ws/src/apps/low_level_planning/models/chipsbox/: chipsbox.sdf  model.config
rls_fetch_ws/src/apps/low_level_planning/models/little_sofa/: little_sofa.sdf  model.config
rls_fetch_ws/src/apps/low_level_planning/models/milkbox/: milkbox.sdf  model.config
rls_fetch_ws/src/apps/low_level_planning/models/open_kitchen/: model.config  open_kitchen.sdf
rls_fetch_ws/src/apps/low_level_planning/models/rls_2/: model.config  rls_2.sdf
rls_fetch_ws/src/apps/low_level_planning/models/sofa/: model.config  sofa.sdf
rls_fetch_ws/src/apps/low_level_planning/models/sofa_chair/: model.config  sofa_chair.sdf
rls_fetch_ws/src/apps/low_level_planning/models/table/: model.config  table.sdf
rls_fetch_ws/src/apps/low_level_planning/models/tall_chair/: model.config  tall_chair.sdf
rls_fetch_ws/src/apps/low_level_planning/models/tea_table/: model.config  tea_table.sdf
rls_fetch_ws/src/apps/low_level_planning/models/wall/: model.config  wall.sdf
rls_fetch_ws/src/apps/low_level_planning/models/workstation/: model.config  workstation.sdf
rls_fetch_ws/src/apps/low_level_planning/rviz/: build_map.rviz  robot_rls_demo.rviz
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/: CMakeLists.txt  package.xml
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/config/: kinematics.yaml
(+287 files in other folders)
