[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch_robot"
version = "0.1.0"
description = "A Python package for controlling the Fetch robot in digital twin"
authors = [
    {name = "Hu Tianrun", email = "tianrunhu@gmail.com"},
]
dependencies = [
    "rospy",
    "numpy",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.270",
]

[tool.setuptools.packages.find]
include = ["fetch*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
fetch = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"