<?xml version="1.0"?>
<package format="2">
  <name>fetch_drivers</name>
  <version>0.1.0</version>
  <description>High-level API for controlling the Fetch robot.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
